k8s/02-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: auto-deploy-test
  namespace: hmb-auto-deploy-test
spec:
  selector:
    app: auto-deploy-test
  ports:
    - port: 80
      targetPort: 8080
