k8s/03-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auto-deploy-test
  namespace: hmb-auto-deploy-test
spec:
  ingressClassName: nginx-externalssl
  rules:
    - host: auto-deploy-test.private.dev.k8s-small.seibert.tools
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: auto-deploy-test
                port:
                  number: 80
